--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - run: git submodule update --init --recursive
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
