--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,13 +26,6 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Archive production artifacts
       uses: actions/upload-artifact@v3
-      with:
-        name: dist-without-markdown
-        path: |
-          dist
-          !dist/**/*.md
-    - name: Archive code coverage results
-      uses: actions/upload-artifact@v3
-      with:
-        name: code-coverage-report
-        path: output/test/code-coverage.html
+      with: 
+         name: party-studio
+         path: Track Studio
