--- a/Track Studio/PartyStudio.csproj
+++ b/Track Studio/PartyStudio.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="SharpYaml" Version="2.1.1" />
   </ItemGroup>
   
 	<ItemGroup>
