Update render lib

--- a/Track Studio/PartyStudio.csproj
+++ b/Track Studio/PartyStudio.csproj
@@ -36,6 +36,7 @@
 	</ItemGroup>
   
 	<ItemGroup>
+	  <ProjectReference Include="..\GCNRenderLibrary\GCNRenderLibrary.csproj" />
 	  <ProjectReference Include="..\GLFrameworkEngine\GLFrameworkEngine.csproj" />
 	  <ProjectReference Include="..\MapStudio.UI\MapStudio.UI.csproj" />
 	  <ProjectReference Include="..\Plugins\PartyStudio\PartyStudioPlugin.csproj" />
